--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -24,20 +24,25 @@ repositories {
 }
 
 dependencies {
-	// implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	// implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-	// implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'	// http://{ip:port}/interview-api/swagger-ui/index.html
 
+	// JWT
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+	
 	// QueryDSL 추가
 	// implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
 	// annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
 	// annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 	// annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
-	// runtimeOnly 'org.postgresql:postgresql'
+	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 
 	compileOnly 'org.projectlombok:lombok'
