--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -34,6 +34,12 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
+	// email
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
+
+	// env
+	implementation 'io.github.cdimascio:dotenv-java:3.0.0'
 	
 	// QueryDSL 추가
 	// implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
