--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -42,10 +42,10 @@ dependencies {
 	implementation 'io.github.cdimascio:dotenv-java:3.0.0'
 	
 	// QueryDSL 추가
-	// implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
-	// annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
-	// annotationProcessor "jakarta.annotation:jakarta.annotation-api"
-	// annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
+	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
