--- a/backend/src/main/resources/yaml/application-local.yml
+++ b/backend/src/main/resources/yaml/application-local.yml
@@ -37,6 +37,8 @@ server:
   error:
     include-stacktrace: always
 jwt:
+  access-token-expiration: 900000 # 15 minutes in milliseconds
+  refresh-token-expiration: 86400000 # 1 day in milliseconds
   secret: ${JWT_SECRET}
   refresh:
     expiration: ${JWT_REFRESH_EXPIRATION}
