--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -25,8 +25,7 @@
     /* Page alias */ 
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"],
-      "@pages/*": ["src/pages/*"]
+      "@/*": ["src/*"]
     }
   },
   "include": ["src"]
